Added README section for DHIS2 containers cloud deployment.